--- a/_documentation/development/rfcs/rfc3696.md
+++ b/_documentation/development/rfcs/rfc3696.md
@@ -12,7 +12,7 @@ K-9 currently provides partial support for this RFC's contents.
 
 **2.**
 
-No known incompatabilities in this section
+No known incompatibilities in this section
 
 **3.**
 
@@ -26,8 +26,8 @@ We support common email address formats, including:
 
 **4.**
 
-No known incompatabilities in this section
+No known incompatibilities in this section
 
 **5.**
 
-No known incompatabilities in this section
+No known incompatibilities in this section
