Add blog post: 2021 in Review
Update blog post "Donations in 2021" to point to the 2021 review.

--- a/_posts/2022-01-07-Donations in 2021.md
+++ b/_posts/2022-01-07-Donations in 2021.md
@@ -98,7 +98,7 @@ The [funding goal](https://k9mail.app/2021/02/14/K-9-Mail-is-looking-for-funding
 
 Since the goal wasn't exceeded, we didn't have to figure out what to do with additional funds. All of the money was paid out to cketti (who is starting to like writing about himself in the third person).
 
-To learn what the K-9 Mail project was up to in 2021, watch out for a blog post that will be published in the coming days.
+To learn what the K-9 Mail project was up to last year, check out [2021 in Review](https://k9mail.app/2022/01/18/2021-in-Review).
 
 
 ### Thank you
