--- a/_posts/2023-04-06-K-9 Mail in March 2023.md
+++ b/_posts/2023-04-06-K-9 Mail in March 2023.md
@@ -7,7 +7,7 @@ author: cketti
 excerpt: Preparations for K-9 Mail 6.600, design system
 ---
 
-[Last month](2023-03-01-K-9 Mail in February 2023.md) we reported on the progress we made in turning K-9 Mail into Thunderbird for Android. Since then a month has passed, so it's time for another detailed update.
+[Last month](/2023/03/02/K-9-Mail-in-February-2023) we reported on the progress we made in turning K-9 Mail into Thunderbird for Android. Since then a month has passed, so it's time for another detailed update.
 
 (If you missed the exciting news last summer, K-9 Mail is now part of the Thunderbird family, and we’re working steadily on transforming it into Thunderbird for Android. If you want to learn more, check out our [Android roadmap](https://developer.thunderbird.net/planning/android-roadmap), this [blog post](https://blog.thunderbird.net/2022/06/revealed-thunderbird-on-android-plans-k9/), and [this FAQ](https://blog.thunderbird.net/2022/06/faq-thunderbird-mobile-and-k-9-mail/).)
 
